Ported to latest Venne.

--- a/Resources/config/components.neon
+++ b/Resources/config/components.neon
@@ -23,5 +23,5 @@ services:
 factories:
 
 	gallery.galleriesControl:
-		class: GalleryModule\Components\GalleriesControl(@gallery.categoryRepository, @gallery.photoRepository)
+		class: GalleryModule\Components\GalleriesControl
 		tags: [component]
