--- a/Resources/config/presenters.neon
+++ b/Resources/config/presenters.neon
@@ -1,8 +1,8 @@
 services:
 	gallery.pagePresenter:
-		class: GalleryModule\Presenters\PagePresenter(@gallery.categoryRepository)
+		class: GalleryModule\Presenters\PagePresenter
 		tags: [presenter]
 
 	gallery.categoryPresenter:
-		class: GalleryModule\Presenters\CategoryPresenter(@gallery.categoryRepository)
+		class: GalleryModule\Presenters\CategoryPresenter
 		tags: [presenter]
