--- a/Resources/config/config.neon
+++ b/Resources/config/config.neon
@@ -1,4 +1,9 @@
 services:
+
+	translator.translator:
+		setup:
+			- '$service->addDictionary(new TranslatorModule\Dictionary(?))'(%modules.gallery.path%/Resources/translations)
+
 	gallery.catalogContent:
 		class: CmsModule\Content\ContentType('GalleryModule\Entities\PageEntity')
 		setup:
